--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Collapsible.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Collapsible.cshtml
@@ -4,7 +4,7 @@
         background-color: #eee;
         color: #444;
         cursor: pointer;
-        padding: 13px; /* button height */
+        padding: 15px; /* button height */
         width: 100%; /* tab width */
         border: none;
         text-align: left;
@@ -34,9 +34,9 @@
     .content {
         padding: 0 0px;
         background-color: white;
-        max-height: 0;
+        max-height: 5px;
         overflow: hidden;
-        transition: max-height 0.2s ease-out;
+        transition: all 0.2s ease-out;
         font-size: 15px;
     }
 
