Vista previa si no, terminada

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Details.cshtml
@@ -48,20 +48,10 @@
 
 
 
-<dt>
-    @Html.DisplayNameFor(model => model.TieneObservacion)
-</dt>
-
-<dd>
-    @Html.DisplayFor(model => model.TieneObservacion)
-</dd>
-
-
-
 
 
 <p>
     @*@Html.ActionLink("Edit", "Edit", new { id = Model.ItemID }) |*@
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver", "Index")
 </p>
 
