indentacion arreglada,interfaz grafica mas consistente(colores)

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Collapsible.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Collapsible.cshtml
@@ -24,10 +24,12 @@
 
     .secondary {
         font-size: 16px;
+        text-indent: 2em;
     }
 
     .terciary {
         font-size: 15px;
+        text-indent: 4em;
     }
 
     /* Style the collapsible content. Note: hidden by default */
