--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Responde/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Responde/Index.cshtml
@@ -4,16 +4,16 @@
     ViewBag.Title = "Formulario";
 }
 
-<h2>Formulario</h2>
-
+@Html.Partial("~\\Views\\Shared\\Auth\\BarraLogin.cshtml")
 @Html.Partial("_Collapsible")
 
+<h2>Formulario</h2>
+
 @*<div class="row">
-    <img src="@Url.Action(" GraficoPie")" alt="SimpleChart" />
-</div>*@
+        <img src="@Url.Action(" GraficoPie")" alt="SimpleChart" />
+    </div>*@
 
 <button class="collapsible main"> Evaluación de aspectos reglamentarios del profesor </button>
-
 <div class="content">
 
     <button class="collapsible secondary"> ¿El profesor repuso clases cuando fue necesario? </button>
@@ -51,11 +51,11 @@
             <img src="@Url.Action("GraficoPie")" alt="SimpleChart" />
         </div>
 
-            <button class="collapsible terciary"> Observaciones </button>
-            <div class="content">
+        <button class="collapsible terciary"> Observaciones </button>
+        <div class="content">
 
-            </div>
         </div>
+    </div>
 
     <button class="collapsible secondary"> ¿Que opina del profesor? </button>
     <div class="content">
