Cambio para que JJPAH pueda enlazar la funcionalidad.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -44,11 +44,10 @@
                     <div class="dropdown-contentt">
                         <a onclick="location.href='@Url.Action("Index", "Formulario")';return false;"> Insertar Formulario </a>
 
-                        <a onclick="location.href='@Url.Action("Index", "Home")';return false;">Asignar Formulario</a>
-                        <!--<a onclick="location.href='@Url.Action("AsignarFormularios", "AsignarFormularios")';return false;">Asignar Formulario</a> -->
+                        <a onclick="location.href='@Url.Action("Index", "AsignarFomularios")';return false;">Asignar Formulario</a>
                         <a onclick="location.href='@Url.Action("Index", "Responde")';return false;">Visualizar resultados evaluaciones</a>
                         <a onclick="location.href='@Url.Action("Index", "Seccion")';return false;"> Seccion </a>
-                        <a onclick="location.href='@Url.Action("Index", "Item")';return false;"> Item </a>
+                        <a onclick="location.href='@Url.Action("Index", "Item")';return false;">Item </a>
                     </div>
                 </div>
             </div>
