--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -42,12 +42,7 @@
                         <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-contentt">
-                        <a onclick="location.href='@Url.Action("Index", "Formulario")';return false;"> Insertar Formulario </a>
-
-                        <a onclick="location.href='@Url.Action("Index", "AsignarFomularios")';return false;">Asignar Formulario</a>
-                        <a onclick="location.href='@Url.Action("Index", "Responde")';return false;">Visualizar resultados evaluaciones</a>
-                        <a onclick="location.href='@Url.Action("Index", "Seccion")';return false;"> Seccion </a>
-                        <a onclick="location.href='@Url.Action("Index", "Item")';return false;">Item </a>
+                        @Html.ActionLink("Asignar Formulario", "Index", "AsignarFormularios")
                     </div>
                 </div>
             </div>
