--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -4,147 +4,120 @@
     ViewBag.Title = "Index";
 }
 
-<html>
+@Styles.Render("~/Content/scrollbar-tabla.css")
 
-<style>
-    .fixed_header {
-        table-layout: fixed;
-        border-collapse: collapse;
-    }
+<div>
+    <h1 align="center">Asignación de herramientas de evaluación</h1>
+</div>
 
-        .fixed_header tbody {
-            display: block;
-            width: 100%;
-            overflow: auto;
-            height: 300px;
-        }
+<div class="container">
+        <div class="row">
+            <div class="col-sm-8">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>Buscar grupos</h3></div>
+                    <div class="panel-body">
+                        <!-- Esta forma hace que la búsqueda aparezca como parte del URL. -->
+                        <!--<form asp-controller="AsignarFormularios" asp-action="Index">
+                            <p>
+                                Nombre: <input type="text" name="SearchString">
+                                <input type="submit" value="Buscar" />
+                            </p>
+                        </form>-->
+                        <!-- Esta forma también recarga la página, pero no muestra los criterios de busqueda en el URL. -->
+                        @using (Html.BeginForm())
+                        {
+                            <!-- Buscador -->
+                            <p>
+                                @Html.TextBox("SearchString", "", new { placeholder= "Nombre del curso"})
+                                <input type="submit" value="Buscar" />
+                            </p>
+                        }
 
-        .fixed_header thead tr {
-            display: block;
-        }
+                    </div>
+                </div>
 
-        .fixed_header th {
-            height: 50px;
-        }
 
-        .fixed_header th, .fixed_header td {
-            width: 200px;
-        }
-</style>
-    <div>
-        <h1 align="center">Asignación de herramientas de evaluación</h1>
-    </div>
 
-    <div class="container">
-            <div class="row">
-                <div class="col-sm-8">
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><h3>Buscar grupos</h3></div>
-                        <div class="panel-body">
-                            <!-- Esta forma hace que la búsqueda aparezca como parte del URL. -->
-                            <!--<form asp-controller="AsignarFormularios" asp-action="Index">
-                                <p>
-                                    Nombre: <input type="text" name="SearchString">
-                                   <input type="submit" value="Buscar" />
-                                </p>
-                            </form>-->
-                            <!-- Esta forma también recarga la página, pero no muestra los criterios de busqueda en el URL. -->
-                            @using (Html.BeginForm())
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>Resultados:</h3></div>
+                    <div class="panel-body">
+                        <!-- Tabla de grupos -->
+                        <table class="fixed_header">
+                            <!-- Table row (fila) de encabezados. -->
+                            <thead>
+                                <!-- Table header -->
+                                <th>
+                                    <div align='center'>Curso</div>
+                                </th>
+                                <th>
+                                    <div align='center'>Ciclo</div>
+                                </th>
+                                <th>
+                                    <div align='center'> Numero de grupo</div>
+                                </th>
+                                <th>
+                                    <div align='center'>Seleccionar para asignar</div>
+                                </th>
+                            </thead>
+                            <tbody>
+                                <!-- Para cada item en Model::Grupos... -->
+                                @foreach (var item in Model.Grupos)
+                                {
+                                    <!-- Table row (fila) de elementos -->
+                                    <tr>
+                                        <!-- Nombre de curso -->
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.nombreCurso)
+                                        </td>
+                                        <!-- Año -->
+                                        <td>
+                                            <div align='center'>@Html.DisplayFor(modelItem => item.anno) - @Html.DisplayFor(modelItem => item.semestre)</div>
+                                        </td>
+                                        <!-- Numero de grupo -->
+                                        <td>
+                                            <div align='center'>@Html.DisplayFor(modelItem => item.numero)</div>
+                                        </td>
+                                        <!-- Checkbox para asignar (por el momento no tiene funcionalidad) -->
+                                        <td>
+                                            <div align='center'><input type="checkbox" name="Curso" value="Curso"></div><br>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                                
+                        </table>
+                    </div>
+                </div>                  
+            </div>                       
+            <div class="col-sm-4">
+
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>Tus formularios</h3></div>
+                    <div class="panel-body">
+
+                        <table class="table">
+                            <!-- Tabla para mostrar los formularios -->
+                            <tr></tr>
+                            @foreach (var item in Model.Formularios)
                             {
-                                <!-- Buscador -->
-                                <p>
-                                    @Html.TextBox("SearchString", "", new { placeholder= "Nombre del curso"})
-                                    <input type="submit" value="Buscar" />
-                                </p>
+                                <tr>
+
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Nombre)
+
+                                    <td>
+                                        <!-- checkbox para elegir formulario-->
+                                        <div align='center'><input type="checkbox" name="Formulario" value="Formulario"></div><br>
+
+
+
+                                </tr>
                             }
 
-                        </div>
+
+                        </table>
                     </div>
-
-
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><h3>Resultados:</h3></div>
-                        <div class="panel-body">
-                            <!-- Tabla de grupos -->
-                            <table class="fixed_header">
-                                <!-- Table row (fila) de encabezados. -->
-                                <thead>
-                                    <!-- Table header -->
-                                    <th>
-                                        <div align='center'>Curso</div>
-                                    </th>
-                                    <th>
-                                        <div align='center'>Ciclo</div>
-                                    </th>
-                                    <th>
-                                        <div align='center'> Numero de grupo</div>
-                                    </th>
-                                    <th>
-                                        <div align='center'>Seleccionar para asignar</div>
-                                    </th>
-                                </thead>
-                                <tbody>
-                                    <!-- Para cada item en Model::Grupos... -->
-                                    @foreach (var item in Model.Grupos)
-                                    {
-                                        <!-- Table row (fila) de elementos -->
-                                        <tr>
-                                            <!-- Nombre de curso -->
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.nombreCurso)
-                                            </td>
-                                            <!-- Año -->
-                                            <td>
-                                                <div align='center'>@Html.DisplayFor(modelItem => item.anno) - @Html.DisplayFor(modelItem => item.semestre)</div>
-                                            </td>
-                                            <!-- Numero de grupo -->
-                                            <td>
-                                                <div align='center'>@Html.DisplayFor(modelItem => item.numero)</div>
-                                            </td>
-                                            <!-- Checkbox para asignar (por el momento no tiene funcionalidad) -->
-                                            <td>
-                                                <div align='center'><input type="checkbox" name="Curso" value="Curso"></div><br>
-                                            </td>
-                                        </tr>
-                                    }
-                                </tbody>
-                                
-                            </table>
-                        </div>
-                    </div>                  
-                </div>                       
-                <div class="col-sm-4">
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><h3>Tus formularios</h3></div>
-                        <div class="panel-body">
-
-                            <table class="table">
-                                <!-- Tabla para mostrar los formularios -->
-                                <tr></tr>
-                                @foreach (var item in Model.Formularios)
-                                {
-                                    <tr>
-
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Nombre)
-
-                                        <td>
-                                            <!-- checkbox para elegir formulario-->
-                                            <div align='center'><input type="checkbox" name="Formulario" value="Formulario"></div><br>
-
-
-
-</tr>
-                                }
-
-
-                            </table>
-                        </div>
-                    </div>                  
-                </div>
-                </div>
-        </div>
-
-</html>
+                </div>                  
+            </div>
+            </div>
+    </div>
