--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                     </button>
                     <div class="dropdown-contentt">
                         @Html.ActionLink("Insertar formulario", "Index", "Formulario")
-                        @Html.ActionLink("Asignar formulario", "Index", "AsignarFomularios")
+                        @Html.ActionLink("Asignar formulario", "Index", "AsignarFormularios")
                         @Html.ActionLink("Visualizar resultados de evaluaciones", "Index", "Responde")
                         @Html.ActionLink("Sección", "Index", "Seccion")
                         @Html.ActionLink("Ítem", "Index", "Item")   
