--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
@@ -6,9 +6,6 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -22,10 +19,8 @@
         <td>
             @Html.DisplayFor(modelItem => item.Nombre)
         </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CodigoFormulario }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CodigoFormulario }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CodigoFormulario })
+        <td>   
+            @Html.ActionLink("Details", "Details", new { id=item.CodigoFormulario }) 
         </td>
     </tr>
 }
