--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -45,19 +45,24 @@
                         <table class="fixed_header">
                             <!-- Table row (fila) de encabezados. -->
                             <thead>
-                                <!-- Table header -->
-                                <th>
-                                    <div align='center'>Curso</div>
-                                </th>
-                                <th>
-                                    <div align='center'>Ciclo</div>
-                                </th>
-                                <th>
-                                    <div align='center'> Numero de grupo</div>
-                                </th>
-                                <th>
-                                    <div align='center'>Seleccionar para asignar</div>
-                                </th>
+                                <tr>
+                                    <!-- Table header -->
+                                    <th>
+                                        <div align='center'>Sigla</div>
+                                    </th>
+                                    <th>
+                                        <div align='center'>Curso</div>
+                                    </th>
+                                    <th>
+                                        <div align='center'>Grupo</div>
+                                    </th>
+                                    <th>
+                                        <div align='center'>Profesor</div>
+                                    </th>
+                                    <th>
+                                        <div align='center'>Seleccionar para asignar</div>
+                                    </th>
+                                </tr>
                             </thead>
                             <tbody>
                                 <!-- Para cada item en Model::Grupos... -->
@@ -65,17 +70,28 @@
                                 {
                                     <!-- Table row (fila) de elementos -->
                                     <tr>
+                                        <!-- Sigla de curso -->
+                                        <td>
+                                            <div align='center'>@Html.DisplayFor(modelItem => item.siglaCurso)</div>
+                                        </td>
                                         <!-- Nombre de curso -->
                                         <td>
-                                            @Html.DisplayFor(modelItem => item.nombreCurso)
-                                        </td>
-                                        <!-- Año -->
-                                        <td>
-                                            <div align='center'>@Html.DisplayFor(modelItem => item.anno) - @Html.DisplayFor(modelItem => item.semestre)</div>
+                                            <div align='center'>@Html.DisplayFor(modelItem => item.nombreCurso)</div>
                                         </td>
                                         <!-- Numero de grupo -->
                                         <td>
                                             <div align='center'>@Html.DisplayFor(modelItem => item.numero)</div>
+                                        </td>
+                                        <!-- Profesor -->
+                                        <td>
+                                            <div align='center'>
+                                            @foreach (var prof in item.profesores)
+                                            {
+                                                @Html.DisplayFor(modelItem => prof.Persona.Nombre) <span> </span>
+                                                @Html.DisplayFor(modelItem => prof.Persona.Apellido1) <span> </span>
+                                                @Html.DisplayFor(modelItem => prof.Persona.Apellido2) <br>
+                                            }
+                                            </div>
                                         </td>
                                         <!-- Checkbox para asignar (por el momento no tiene funcionalidad) -->
                                         <td>
