Añadido de una posible lectura del procedimineto almacenado.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Responde/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Responde/Index.cshtml
@@ -53,7 +53,7 @@
 
         <button class="collapsible terciary"> Observaciones </button>
         <div class="content">
-
+            <p>@Url.Action("RecComentarios")</p>
         </div>
     </div>
 
