--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -14,15 +14,24 @@
 <div class="form-horizontal">
     @*<h4>Item</h4>*@
     <hr />
+
+    <div class="form-group">
+        @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ItemId, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.ItemId, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         @Html.Label("Tipo Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-           
-            @Html.DropDownListFor(model => model.TipoPregunta, new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"),"Seleccione")
+
+            @Html.DropDownListFor(model => model.TipoPregunta, new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"), "Seleccione")
         </div>
     </div>
-    
+
 
     <div class="form-group">
         @Html.Label("Texto Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -32,14 +41,16 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Categoria, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.Categoria, new SelectList(ViewBag.CategoriaItems, "Value", "Text"), "Seleccione")
 
+    <div class="form-group">
+        @Html.LabelFor(model => model.Categoria, "Categoría", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("Categoría", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Categoria, "", new { @class = "text-danger" })
         </div>
     </div>
-    
+ 
+
 
     <div class="form-group">
         @Html.Label("Tiene Observación", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -50,12 +61,12 @@
 
 
     @* Creacion de botones en la misma linea y con color gris *@
- <div class="form-group">
-     <div class="col-md-offset-2 col-md-10">
-     <input type="submit" value="Crear"  class="btn btn-secondary" p id="botonCrear" onclick="accionBotonCrear()"/>
-         @*<input type="submit" value="Vista Previa" disabled class="btn btn-secondary" p id="botonVistaPrevia" onclick="accionBotonVistaPrevia()"/>*@
-         <input type="button" value="Cancelar" class="btn btn-secondary"  id="botonCancelar" onclick="accionBotonCancelar()" />
-     </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Crear" class="btn btn-secondary" p id="botonCrear" onclick="accionBotonCrear()" />
+            @*<input type="submit" value="Vista Previa" disabled class="btn btn-secondary" p id="botonVistaPrevia" onclick="accionBotonVistaPrevia()"/>*@
+            <input type="button" value="Cancelar" class="btn btn-secondary" id="botonCancelar" onclick="accionBotonCancelar()" />
+        </div>
     </div>
 
 
