--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Opiniometro_WebApp.Models.AsignarFormulariosModel
+﻿@model Opiniometro_WebApp.Models.AsignarFormulariosViewModel
 
 @{
     ViewBag.Title = "Index";
@@ -10,130 +10,103 @@
     <h1 align="center">Asignación de herramientas de evaluación</h1>
 </div>
 
+@using (Html.BeginForm("SubmitSelected", "Grupos", FormMethod.Post, new { encType = "multipart/form-data", name = "myform" }))
+{
 <div class="container">
-        <div class="row">
-            <div class="col-sm-8">
-                <div class="panel panel-default">
-                    <div class="panel-heading"><h3>Buscar grupos</h3></div>
-                    <div class="panel-body">
-                        <!-- Esta forma hace que la búsqueda aparezca como parte del URL. -->
-                        <!--<form asp-controller="AsignarFormularios" asp-action="Index">
-                            <p>
-                                Nombre: <input type="text" name="SearchString">
-                                <input type="submit" value="Buscar" />
-                            </p>
-                        </form>-->
-                        <!-- Esta forma también recarga la página, pero no muestra los criterios de busqueda en el URL. -->
-                        @using (Html.BeginForm())
-                        {
-                            <!-- Buscador -->
-                            <p>
-                                @Html.TextBox("SearchString", "", new { placeholder= "Nombre del curso"})
-                                <input type="submit" value="Buscar" />
-                            </p>
-                        }
+    <div class="row">
+        <div class="col-sm-8">
+            <div class="panel panel-default">
+                <div class="panel-heading"><h3>Buscar grupos</h3></div>
+                <div class="panel-body">
+                    <!-- Esta forma hace que la búsqueda aparezca como parte del URL. -->
+                    <!--<form asp-controller="AsignarFormularios" asp-action="Index">
+                        <p>
+                            Nombre: <input type="text" name="SearchString">
+                            <input type="submit" value="Buscar" />
+                        </p>
+                    </form>-->
+                    <!-- Esta forma también recarga la página, pero no muestra los criterios de busqueda en el URL. -->
+                    @using (Html.BeginForm())
+                    {
+                        <!-- Buscador -->
+                        <p>
+                            @Html.TextBox("SearchString", "", new { placeholder = "Nombre del curso" })
+                            <input type="submit" value="Buscar" />
+                        </p>
+                    }
 
-                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="panel panel-default">
+                <div class="panel-heading"><h3>Resultados:</h3></div>
+                <div class="panel-body">
+
+                    @*Tabla de grupos*@
+
+                    <table class="fixed_header">
+                        <thead>
+                            <tr>
+                                <th>
+                                    <div align='center'>Selec. para asignar</div>
+                                </th>
+                                <th>
+                                    <div align='center'>Sigla</div>
+                                </th>
+                                <th>
+                                    <div align='center'>Curso</div>
+                                </th>
+                                <th>
+                                    <div align='center'>Grupo</div>
+                                </th>
+                                <th>
+                                    <div align='center'>Profesor</div>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Para cada grupo en Model::Grupos... -->
+                            @Html.EditorFor(model => Model.Grupos)
+                        </tbody>
+                    </table>
                 </div>
 
-
-
-                <div class="panel panel-default">
-                    <div class="panel-heading"><h3>Resultados:</h3></div>
-                    <div class="panel-body">
-                        <!-- Tabla de grupos -->
-                        <table class="fixed_header">
-                            <!-- Table row (fila) de encabezados. -->
-                            <thead>
-                                <tr>
-                                    <!-- Table header -->
-                                    <th>
-                                        <div align='center'>Sigla</div>
-                                    </th>
-                                    <th>
-                                        <div align='center'>Curso</div>
-                                    </th>
-                                    <th>
-                                        <div align='center'>Grupo</div>
-                                    </th>
-                                    <th>
-                                        <div align='center'>Profesor</div>
-                                    </th>
-                                    <th>
-                                        <div align='center'>Seleccionar para asignar</div>
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- Para cada item en Model::Grupos... -->
-                                @foreach (var item in Model.Grupos)
-                                {
-                                    <!-- Table row (fila) de elementos -->
-                                    <tr>
-                                        <!-- Sigla de curso -->
-                                        <td>
-                                            <div align='center'>@Html.DisplayFor(modelItem => item.siglaCurso)</div>
-                                        </td>
-                                        <!-- Nombre de curso -->
-                                        <td>
-                                            <div align='center'>@Html.DisplayFor(modelItem => item.nombreCurso)</div>
-                                        </td>
-                                        <!-- Numero de grupo -->
-                                        <td>
-                                            <div align='center'>@Html.DisplayFor(modelItem => item.numero)</div>
-                                        </td>
-                                        <!-- Profesor -->
-                                        <td>
-                                            <div align='center'>
-                                            @foreach (var prof in item.profesores)
-                                            {
-                                                @Html.DisplayFor(modelItem => prof.Persona.Nombre) <span> </span>
-                                                @Html.DisplayFor(modelItem => prof.Persona.Apellido1) <span> </span>
-                                                @Html.DisplayFor(modelItem => prof.Persona.Apellido2) <br>
-                                            }
-                                            </div>
-                                        </td>
-                                        <!-- Checkbox para asignar (por el momento no tiene funcionalidad) -->
-                                        <td>
-                                            <div align='center'><input type="checkbox" name="Curso" value="Curso"></div><br>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                                
-                        </table>
-                    </div>
-                </div>                  
-            </div>                       
-            <div class="col-sm-4">
-
-                <div class="panel panel-default">
-                    <div class="panel-heading"><h3>Tus formularios</h3></div>
-                    <div class="panel-body">
-
-                        <table class="table">
-                            <!-- Tabla para mostrar los formularios -->
-                            <tr></tr>
-                            @foreach (var item in Model.Formularios)
-                            {
-                                <tr>
-
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Nombre)
-
-                                    <td>
-                                        <!-- checkbox para elegir formulario-->
-                                        <div align='center'><input type="checkbox" name="Formulario" value="Formulario"></div><br>
-
-
-
-                                </tr>
-                            }
-
-
-                        </table>
-                    </div>
-                </div>                  
             </div>
+        </div>
+
+
+
+        <div class="col-sm-4">
+
+            <div class="panel panel-default">
+                <div class="panel-heading"><h3>Tus formularios</h3></div>
+                <div class="panel-body">
+
+                    <table class="table">
+                        <!-- Tabla para mostrar los formularios -->
+                        <tr></tr>
+                        @foreach (var item in Model.Formularios)
+                        {
+                            <tr>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Nombre)
+
+                                <td>
+                                    <!-- checkbox para elegir formulario-->
+                                    <div align='center'><input type="checkbox" name="Formulario" value="Formulario"></div><br>
+                            </tr>
+                        }
+                    </table>
+                </div>
             </div>
+        </div>
     </div>
+</div>
+
+<div align='center'>
+    <input type="submit" name="Asignar" id="Asignar" value="Asignar" />
+</div>
+}
