--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -43,12 +43,15 @@
                         @Html.ActionLink("Asignar formulario", "Index", "AsignarFormularios")
                         @Html.ActionLink("Visualizar resultados de evaluaciones", "Index", "Responde")
                         @Html.ActionLink("Sección", "Index", "Seccion")
-                        @Html.ActionLink("Ítem", "Index", "Item")   
-                    </div>
+                        @Html.ActionLink("Ítem", "Index", "Item")
                     </div>
                 </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>@Html.ActionLink("Salir", "CerrarSesion", "Auth")</li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
 
 
