--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/CrearUsuario.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/CrearUsuario.cshtml
@@ -16,13 +16,7 @@
             ViewBag.Title = "Index";
         }
 
-        <!--Para usar la clase login-error del archivo estilos-propios.css-->
-        <link href="@Url.Content("~/Content/estilos-propios.css")" rel="stylesheet" type="text/css" />
-
-        <!--Barra-->
-        @Html.Partial("~\\Views\\Shared\\Auth\\BarraLogin.cshtml")
-
-        <!--Login-->
+        <!--Registrar-->
         <div align="center">
             <h1>Opiniómetro@UCR</h1>
             @using (Html.BeginForm("Login", "Auth", FormMethod.Post))
