--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Responde/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Responde/Index.cshtml
@@ -53,7 +53,10 @@
 
         <button class="collapsible terciary"> Observaciones </button>
         <div class="content">
-            <p>@Url.Action("RecComentarios")</p>
+            @foreach (var item in @Url.Action("RecComentarios"))
+            {
+            @item.ToString()
+            }
         </div>
     </div>
 
