Se agrega categoría

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Categoria/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Categoria/Create.cshtml
@@ -14,7 +14,7 @@
     <div class="form-horizontal">
         <h4>Categoria</h4>
         <hr />
-        @Html.ValidationSummary(true, "Categoria", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, " ", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.NombreCategoria, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
