--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
                         <a onclick="location.href='@Url.Action("Index", "Responde")';return false;">Visualizar resultados evaluaciones</a>
                         <a onclick="location.href='@Url.Action("Index", "Seccion")';return false;"> Seccion </a>
                         <a onclick="location.href='@Url.Action("Index", "Item")';return false;">Item </a>
+                        <a onclick="location.href='@Url.Action("Index", "Categoria")';return false;">Categoria </a>
                     </div>
                     </div>
                 </div>
