--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
@@ -42,7 +42,7 @@
             @Html.DisplayFor(modelItem => item.TextoPregunta)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Categoria )
+            @Html.DisplayFor(modelItem => item.NombreCategoria )
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.TieneObservacion )
